--- a/frontend/src/components/css/Navbar.css
+++ b/frontend/src/components/css/Navbar.css
@@ -123,7 +123,7 @@
     outline: none;
     /* margin-top: 2px; */
     margin-left: 8px;
-    background-color: #222;
+    background-color: #c03232;
     color: white;
     font-weight: 700;
     padding: 10px;
@@ -221,7 +221,7 @@
     border: none;
     outline: none;
     margin-top: 10px;
-    background-color: #222;
+    background-color:#c03232;
     color: white;
     font-weight: 700;
     padding: 10px;
